fix(SelectDropdown): added z-index for dropdown list (#579)

--- a/src/components/SelectComponents/SelectDropdown/SelectDropdown.css
+++ b/src/components/SelectComponents/SelectDropdown/SelectDropdown.css
@@ -1,4 +1,5 @@
 .SelectDropdown {
+  z-index: 9999;
   box-sizing: border-box;
   width: 100%;
   min-width: 220px;
